# Cross-Cube-Vega-Hedger

./: .gitignore  BUILD.md  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
configs/: default.yaml  scenarios.yaml
docs/: stylised_facts.md
docs/report/: references.bib  report.tex
docs/report/style/: README.md  architecture.tikz  cxvega.sty  report.css
docs/report/templates/: report.html.j2
docs/site/: appendix.html  index.html  model.html  results.html
docs/site/assets/: tufte.css
notebooks/: 01_cube_simulator_walkthrough.ipynb  02_calibration_diagnostics.ipynb  03_factor_recovery_pca.ipynb  04_mm_pnl_attribution.ipynb
scripts/: __init__.py  build_html_site.py  build_pdf_report.py  build_readme_assets.py  generate_figures.py  run_calibration_diag.py  run_mm_simulation.py  run_pca_recovery.py
src/cxvega/: __init__.py  analytics.py  arb_checks.py  calibration.py  config.py  curves.py  greeks.py  hedging.py  market_maker.py  plotting.py  pnl.py  pricers.py  quoting.py  reporting.py  rng.py  simulator.py
tests/: test_analytics.py  test_arb_checks.py  test_calibration.py  test_greeks.py  test_hedging.py  test_pnl.py  test_pricers.py  test_simulator.py
